# cofound

./: .gitignore  CLAUDE.md  LICENSE  README.md  kickstarter.md  pyproject.toml  smoke_test.py
src/cofound/: __init__.py  __main__.py  cli.py
src/cofound/agents/: __init__.py
src/cofound/canvas/: __init__.py  documents.py  notes.py  plan.py  state.py  workspace.py
src/cofound/engine/: __init__.py  client.py  errors.py
src/cofound/prompts/: __init__.py  cofounder.md  ultraplan.md
src/cofound/ui/: __init__.py  app.py  canvas_pane.py  chat_pane.py  status_bar.py  styles.css
tests/: conftest.py  test_canvas.py  test_state.py  test_ui.py
