[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cofound"
version = "0.1.0"
description = "An AI cofounder in your terminal — leads, plans, and writes to a local canvas. Built on Claude."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Cofound" }]
keywords = ["ai", "cofounder", "tui", "textual", "agent", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
]

dependencies = [
    # The single SDK dependency. Only `engine/` imports it.
    "claude-agent-sdk>=0.1.0",
    # Terminal UI (pulls in rich).
    "textual>=0.80",
    # Typed canvas items and machine state.
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/imoukhs/cofound"
Repository = "https://github.com/imoukhs/cofound"
Issues = "https://github.com/imoukhs/cofound/issues"

[project.scripts]
cofound = "cofound.cli:main"

[tool.hatch.build.targets.wheel]
# Non-.py assets (prompt .md files, the Textual .css) live inside the package
# directory and are picked up automatically; no force-include needed.
packages = ["src/cofound"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
